// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Animated> does not animate when props other than nodes or links change 1`] = `
<Container
  direction="ltr"
  duration={1}
  easing={[Function]}
  gProps={{}}
  getChildren={[Function]}
  height={100}
  keyProp="name"
  labelProp="name"
  links={
    [
      {
        "source": {
          "data": {
            "name": "Colour",
          },
          "x": 1,
          "y": 2,
        },
        "target": {
          "data": {
            "name": "Black",
          },
          "x": 1,
          "y": 2,
        },
      },
    ]
  }
  margins={
    {
      "left": 20,
      "top": 10,
    }
  }
  nodeProps={{}}
  nodeShape="rect"
  nodes={
    [
      {
        "data": {
          "name": "Colour",
        },
        "x": 1,
        "y": 2,
      },
      {
        "data": {
          "name": "Black",
        },
        "x": 1,
        "y": 2,
      },
    ]
  }
  pathProps={{}}
  steps={1}
  svgProps={{}}
  textProps={{}}
  width={100}
/>
`;

exports[`<Animated> renders correctly and sets initial state 1`] = `
<Container
  direction="ltr"
  duration={1}
  easing={[Function]}
  gProps={{}}
  getChildren={[Function]}
  height={100}
  keyProp="name"
  labelProp="name"
  links={
    [
      {
        "source": {
          "data": {
            "name": "Colour",
          },
          "x": 1,
          "y": 2,
        },
        "target": {
          "data": {
            "name": "Black",
          },
          "x": 1,
          "y": 2,
        },
      },
    ]
  }
  margins={
    {
      "left": 20,
      "top": 10,
    }
  }
  nodeProps={{}}
  nodeShape="circle"
  nodes={
    [
      {
        "data": {
          "name": "Colour",
        },
        "x": 1,
        "y": 2,
      },
      {
        "data": {
          "name": "Black",
        },
        "x": 1,
        "y": 2,
      },
    ]
  }
  pathProps={{}}
  steps={1}
  svgProps={{}}
  textProps={{}}
  width={100}
/>
`;
